--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -64,7 +64,7 @@
             {% endif %}
 
         </nav>
-        <div class="container">
+        <div>
             {% block body %}{% endblock %}
         </div>
 </body>
