--- a/templates/articles/mes-articles-list.html.twig
+++ b/templates/articles/mes-articles-list.html.twig
@@ -1,8 +1,6 @@
-
-
 {% extends 'base.html.twig' %}
 
-{% block title %}Utilisateurs{% endblock %}
+{% block title %}Mes Articles{% endblock %}
 
 {% block body %}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
@@ -10,41 +8,32 @@
     {% include '/utils/user-side-bar.html.twig' %}
 
     <div class="profile-container">
-        <h1>Utilisateurs</h1>
+        <h1>Mes Articles</h1>
         <table class="table">
             <thead>
                 <tr>
-                    <th scope="col"># ID</th>
-                    <th scope="col">Profile</th>
-                    <th scope="col">Nom</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Rôle</th>
+                    <th scope="col">Titre</th>
+                    <th scope="col">Image de couverture</th>
+                    <th scope="col">Date de publication</th>
                     <th scope="col">Actions</th>
-
                 </tr>
             </thead>
             <tbody>
-                {% for user in pagination %}
+                {% for article in articles %}
                 <tr>
-                   <th scope="row">{{ user.id }}</th>
-                     <td><img src="{{ user.photo }}" alt="" style="border-radius:50%; object-fit:cover;" height="50px" width="50px"  onerror="this.src='https://www.gravatar.com/avatar/{{ user.email }}?s=200&d=mp'" /> 
-                     </td>
-                    <td>{{ user.prenom }}</td>
-                    <td>{{ user.email }}</td>
-                    <td>{{ user.role.label }}</td>
+                    <td><img src="{{ article.image }}" alt="image de couverture" height="100px"
+                            style="object-fit: cover;" width="100px"></td>
+                    <td><b>{{ article.title }}</b></td>
+                    <td>{{ article.createdAt|date('d/m/Y') }}</td>
                     <td>
-                        <a href="/admin/user/edit" class="m-2 btn btn-primary">Modifier</a>
-                        <a href="/admin/user/supprimer" class="m-2 btn btn-danger">Supprimer</a>
+                        <a href="/article/{{ article.id }}" class="m-2 btn btn-primary">Voir</a>
+                        <a href="/article/{{ article.id }}/modifier" class="m-2 btn btn-warning">Modifier</a>
+                        <a href="/article/{{ article.id }}/supprimer" class="m-2 btn btn-danger">Supprimer</a>
                     </td>
-
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
-
-        <div class="pagination">
-            {{ knp_pagination_render(pagination) }}
-        </div>
 
     </div>
 
