--- a/templates/comment/mes-comments-list.html.twig
+++ b/templates/comment/mes-comments-list.html.twig
@@ -1,8 +1,7 @@
-
-
 {% extends 'base.html.twig' %}
 
-{% block title %}Utilisateurs{% endblock %}
+{% block title %}Mes Commentaires{% endblock %}
+
 
 {% block body %}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
@@ -10,41 +9,29 @@
     {% include '/utils/user-side-bar.html.twig' %}
 
     <div class="profile-container">
-        <h1>Utilisateurs</h1>
+        <h1>Mes Articles</h1>
         <table class="table">
             <thead>
                 <tr>
-                    <th scope="col"># ID</th>
-                    <th scope="col">Profile</th>
-                    <th scope="col">Nom</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Rôle</th>
+                    <th scope="col">Article</th>
+                    <th scope="col">Commentaire</th>
+                    <th scope="col">Date</th>
                     <th scope="col">Actions</th>
-
                 </tr>
             </thead>
             <tbody>
-                {% for user in pagination %}
+                {% for comment in comments %}
                 <tr>
-                   <th scope="row">{{ user.id }}</th>
-                     <td><img src="{{ user.photo }}" alt="" style="border-radius:50%; object-fit:cover;" height="50px" width="50px"  onerror="this.src='https://www.gravatar.com/avatar/{{ user.email }}?s=200&d=mp'" /> 
-                     </td>
-                    <td>{{ user.prenom }}</td>
-                    <td>{{ user.email }}</td>
-                    <td>{{ user.role.label }}</td>
+                    <td> <a href="/articles/{{comment.getArticleId().getId()}}" >{{ comment.getArticleId().getTitle() }}</a>  </td>
+                    <td>{{ comment.content }}</td>
+                    <td>{{ comment.createdAt|date('d/m/Y') }}</td>
                     <td>
-                        <a href="/admin/user/edit" class="m-2 btn btn-primary">Modifier</a>
-                        <a href="/admin/user/supprimer" class="m-2 btn btn-danger">Supprimer</a>
+                        <a href="/comment/{{ comment.id }}/supprimer" class="btn btn-danger">Supprimer</a>
                     </td>
-
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
-
-        <div class="pagination">
-            {{ knp_pagination_render(pagination) }}
-        </div>
 
     </div>
 
