--- a/templates/comment/admin-comments-list.html.twig
+++ b/templates/comment/admin-comments-list.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Mes Commentaires{% endblock %}
+{% block title %}Commentaires{% endblock %}
 
 
 {% block body %}
@@ -9,7 +9,7 @@
     {% include '/utils/user-side-bar.html.twig' %}
 
     <div class="profile-container">
-        <h1>Mes Commentaires</h1>
+        <h1>Commentaires</h1>
         <table class="table">
             <thead>
                 <tr>
