--- a/templates/articles/admin-articles-list.html.twig
+++ b/templates/articles/admin-articles-list.html.twig
@@ -1,7 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Mes Commentaires{% endblock %}
-
+{% block title %}Mes Articles{% endblock %}
 
 {% block body %}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
@@ -9,24 +8,27 @@
     {% include '/utils/user-side-bar.html.twig' %}
 
     <div class="profile-container">
-        <h1>Mes Commentaires</h1>
+        <h1>Mes Articles</h1>
         <table class="table">
             <thead>
                 <tr>
-                    <th scope="col">Article</th>
-                    <th scope="col">Commentaire</th>
-                    <th scope="col">Date</th>
+                    <th scope="col">Titre</th>
+                    <th scope="col">Image de couverture</th>
+                    <th scope="col">Date de publication</th>
                     <th scope="col">Actions</th>
                 </tr>
             </thead>
             <tbody>
-                {% for comment in comments %}
+                {% for article in articles %}
                 <tr>
-                    <td> <a href="/articles/{{comment.getArticleId().getId()}}" >{{ comment.getArticleId().getTitle() }}</a>  </td>
-                    <td>{{ comment.content }}</td>
-                    <td>{{ comment.createdAt|date('d/m/Y') }}</td>
+                    <td><img src="{{ article.image }}" alt="image de couverture" height="100px"
+                            style="object-fit: cover;" width="100px"></td>
+                    <td><b>{{ article.title }}</b></td>
+                    <td>{{ article.createdAt|date('d/m/Y') }}</td>
                     <td>
-                        <a href="/comment/{{ comment.id }}/supprimer" class="btn btn-danger">Supprimer</a>
+                        <a href="/articles/{{ article.id }}" class="m-2 btn btn-primary">Voir</a>
+                        <a href="/admin/article/{{ article.id }}/modifier" class="m-2 btn btn-warning">Modifier</a>
+                        <a href="/admin/article/{{ article.id }}/supprimer" class="m-2 btn btn-danger">Supprimer</a>
                     </td>
                 </tr>
                 {% endfor %}
