--- a/templates/tag/index.html.twig
+++ b/templates/tag/index.html.twig
@@ -1,23 +1,69 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello TagController!{% endblock %}
+{% block title %}Tags{% endblock %}
+
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+<div class="user-dashboard">
+    {% include '/utils/user-side-bar.html.twig' %}
 
-<div class="example-wrapper">
-    
-    
-    {% for tag in pagination %}
-   <h1> {{ tag.mot }} </h1>
-    {% endfor %}
+    <div class="profile-container">
+        <h1>Tags</h1>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col"># ID</th>
+                    <th scope="col">Tag</th>
+                    <th scope="col">Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for tag in pagination %}
+                <tr>
+                    <td>{{ tag.id }}</td>
+                    <td>{{ tag.mot }}</td>
+                    <td>
+                        <a href="/admin/tag/{{tag.id}}/supprimer" class="btn btn-danger">Supprimer</a>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
 
-<div class="pagination">
-    {{ knp_pagination_render(pagination) }}
-</div>
+    </div>
 
-</div>
-{% endblock %}
+    <script>
+        const newPasswordInput = document.getElementById("new_password");
+        const confirmPasswordInput = document.getElementById("confirm_password");
+        const submitButton = document.getElementById("password-submit");
+        const errorParagraph = document.querySelector("p");
+        const imageInput = document.getElementById('photo');
+        const imagePreview = document.getElementById('photo-preview');
+        submitButton.disabled = true
+        function validatePassword() {
+            if (newPasswordInput.value !== confirmPasswordInput.value) {
+                errorParagraph.textContent = "Les deux mots de passe ne correspondent pas.";
+                submitButton.disabled = true;
+            } else {
+                errorParagraph.textContent = "";
+                submitButton.disabled = false;
+            }
+        }
+
+        newPasswordInput.addEventListener("keyup", validatePassword);
+        confirmPasswordInput.addEventListener("keyup", validatePassword);
+        console.log(imageInput);
+        imageInput.addEventListener('change', function () {
+            const file = this.files[0];
+            if (file) {
+                const reader = new FileReader();
+                reader.onload = function () {
+                    imagePreview.style.display = 'block';
+                    imagePreview.src = reader.result;
+                }
+                reader.readAsDataURL(file);
+            }
+        });
+    </script>
+    {% endblock %}
