--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -33,8 +33,8 @@
                     <td>{{ user.email }}</td>
                     <td>{{ user.role.label }}</td>
                     <td>
-                        <a href="/admin/user/edit" class="m-2 btn btn-primary">Modifier</a>
-                        <a href="/admin/user/supprimer" class="m-2 btn btn-danger">Supprimer</a>
+                        <a href="/admin/user/{{user.id}}/edit" class="m-2 btn btn-primary">Modifier</a>
+                        <a href="/admin/user/{{user.id}}/delete" class="m-2 btn btn-danger">Supprimer</a>
                     </td>
 
                 </tr>
