--- a/templates/articles/article-create.html.twig
+++ b/templates/articles/article-create.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<div class="article-container new-article-page ">
+<div class="container article-container new-article-page ">
 
     <h1>Create a new article</h1>
 
@@ -60,6 +60,8 @@
     </div>
 
 </div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/3.0.0/marked.min.js"></script>
 <script>
