--- a/templates/articles/article-edit.html.twig
+++ b/templates/articles/article-edit.html.twig
@@ -62,6 +62,10 @@
     </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/3.0.0/marked.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css">
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
+
 <script>
     const editor = document.getElementById('markdown-editor');
     const preview = document.getElementById('markdown-preview');
@@ -86,6 +90,11 @@
             reader.readAsDataURL(file);
         }
     });
+    
+    $(document).ready(function () {
+        $('#tags').select2();
+    });
+
 </script>
 
 {% endblock %}
